# novel-dev

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_ollama_connection.py
src/: main.py
src/agents/: outline_creator.py  story_analyzer.py  story_critic.py  writing_engine.py
src/core/: context_manager.py  llm_interface.py  models.py  novel_writer.py
src/interfaces/: cli.py
src/utils/: logger.py
tests/: test_basic_functionality.py
